--- a/app/src/main/res/layout/activity_nuevo_gasto.xml
+++ b/app/src/main/res/layout/activity_nuevo_gasto.xml
@@ -38,62 +38,6 @@
         tools:layout_editor_absoluteY="154dp" />
 
     <EditText
-        android:id="@+id/idTextDetalle"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
-        android:background="@android:color/white"
-        android:ems="10"
-        android:fontFamily="@font/lekton"
-        android:inputType="textPersonName"
-        android:text="Detalle*"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="481dp" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonNombre7"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:ems="10"
-        android:fontFamily="@font/lekton"
-        android:inputType="textPersonName"
-        android:text="Link de cancelacion*"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="620dp" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonNombre6"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:ems="10"
-        android:fontFamily="@font/lekton"
-        android:inputType="date"
-        android:text="Fecha de proximo pago*"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="566dp" />
-
-    <EditText
-        android:id="@+id/idTextTipoDeCargo"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:ems="10"
-        android:fontFamily="@font/lekton"
-        android:inputType="textPersonName"
-        android:text="Tipo de cargo*"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="425dp" />
-
-    <EditText
         android:id="@+id/idTextCategoria"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -104,20 +48,7 @@
         android:text="Categoria*"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="369dp" />
-
-    <EditText
-        android:id="@+id/idTextMonto"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:ems="10"
-        android:fontFamily="@font/lekton"
-        android:inputType="textPersonName"
-        android:text="Monto*"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="319dp" />
 
@@ -132,8 +63,69 @@
         android:text="Nombre*"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="270dp" />
+        tools:layout_editor_absoluteY="220dp" />
+
+    <EditText
+        android:id="@+id/idTextTipoDeCargo"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:fontFamily="@font/lekton"
+        android:inputType="textPersonName"
+        android:text="Tipo de cargo*"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="375dp" />
+
+    <EditText
+        android:id="@+id/idTextDetalle"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:fontFamily="@font/lekton"
+        android:inputType="textPersonName"
+        android:text="Detalle*"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="431dp" />
+
+    <EditText
+        android:id="@+id/idTextLinkDeCancelacion"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:fontFamily="@font/lekton"
+        android:inputType="textPersonName"
+        android:text="Link de cancelacion*"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="570dp" />
+
+    <EditText
+        android:id="@+id/idTextMonto"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:fontFamily="@font/lekton"
+        android:inputType="textPersonName"
+        android:text="Monto*"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="269dp" />
 
     <TextView
         android:id="@+id/textViewNuevoGasto"
@@ -151,7 +143,7 @@
         android:id="@+id/Agregar_NuevoCargo_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="36dp"
         android:width="200dp"
         android:height="55dp"
         android:backgroundTint="#FFFFFF"
@@ -163,7 +155,23 @@
         app:iconTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view2" />
+
+    <EditText
+        android:id="@+id/idDateFechaProximoPago"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:fontFamily="@font/lekton"
+        android:inputType="date"
+        android:text="Fecha Proximo Pago"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="517dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
