--- a/app/src/main/res/layout/activity_nuevo_gasto.xml
+++ b/app/src/main/res/layout/activity_nuevo_gasto.xml
@@ -6,41 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".NuevoGasto">
 
-    <LinearLayout
-        android:layout_width="411dp"
-        android:layout_height="93dp"
-        android:background="@color/app_primary"
-        android:gravity="bottom"
-        android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        tools:layout_editor_absoluteX="0dp">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="95dp"
-            android:layout_height="62dp"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:contentDescription="@string/nav_header_desc"
-            app:srcCompat="@drawable/app_logo" />
-
-    </LinearLayout>
-
     <View
         android:id="@+id/view5"
         android:layout_width="wrap_content"
-        android:layout_height="900dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/layout_top_rounded"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="154dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/idTextCategoria"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
@@ -50,12 +31,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="319dp" />
+        app:layout_constraintTop_toBottomOf="@+id/idTextMonto" />
 
     <EditText
         android:id="@+id/idTextNombre"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
@@ -65,12 +47,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="220dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewNuevoGasto" />
 
     <EditText
         android:id="@+id/idTextTipoDeCargo"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
@@ -80,12 +63,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="375dp" />
+        app:layout_constraintTop_toBottomOf="@+id/idTextCategoria" />
 
     <EditText
         android:id="@+id/idTextDetalle"
         android:layout_width="300dp"
         android:layout_height="70dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
@@ -95,12 +79,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="431dp" />
+        app:layout_constraintTop_toBottomOf="@+id/idTextTipoDeCargo" />
 
     <EditText
         android:id="@+id/idTextLinkDeCancelacion"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
@@ -110,12 +95,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="570dp" />
+        app:layout_constraintTop_toBottomOf="@+id/idDateFechaProximoPago" />
 
     <EditText
         android:id="@+id/idTextMonto"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
@@ -125,25 +111,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="269dp" />
+        app:layout_constraintTop_toBottomOf="@+id/idTextNombre" />
 
     <TextView
         android:id="@+id/textViewNuevoGasto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:text="Nuevo Gasto"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="162dp" />
+        app:layout_constraintTop_toTopOf="@+id/view5" />
 
     <Button
         android:id="@+id/Agregar_NuevoCargo_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
+        android:layout_marginTop="20dp"
         android:width="200dp"
         android:height="55dp"
         android:backgroundTint="#FFFFFF"
@@ -157,12 +144,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view2" />
+        app:layout_constraintTop_toBottomOf="@+id/idTextLinkDeCancelacion" />
 
     <EditText
         android:id="@+id/idDateFechaProximoPago"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
@@ -172,6 +160,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="517dp" />
+        app:layout_constraintTop_toBottomOf="@+id/idTextDetalle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
