--- a/app/src/main/res/layout/activity_nuevo_gasto.xml
+++ b/app/src/main/res/layout/activity_nuevo_gasto.xml
@@ -15,26 +15,10 @@
         android:background="@drawable/layout_top_rounded"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/idTextCategoria"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:background="@drawable/edittext_rounded_corners"
-        android:ems="10"
-        android:fontFamily="@font/lekton"
-        android:hint="Categoria*"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idTextMonto" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/idTextNombre"
@@ -55,47 +39,25 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewNuevoGasto" />
 
     <EditText
-        android:id="@+id/idTextTipoDeCargo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:background="@drawable/edittext_rounded_corners"
-        android:ems="10"
-        android:fontFamily="@font/lekton"
-        android:hint="Tipo de cargo*"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idTextCategoria" />
-
-    <EditText
         android:id="@+id/idTextDetalle"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_width="370dp"
+        android:layout_height="50dp"
         android:background="@drawable/edittext_rounded_corners"
         android:ems="10"
         android:fontFamily="@font/lekton"
         android:hint="Detalle*"
         android:inputType="textPersonName"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/idTextTipoDeCargo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idTextTipoDeCargo" />
+        app:layout_constraintTop_toBottomOf="@+id/idSpinnerCategorias" />
 
     <EditText
         android:id="@+id/idTextLinkDeCancelacion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/edittext_rounded_corners"
         android:ems="10"
@@ -104,16 +66,15 @@
         android:inputType="textPersonName"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idDateFechaProximoPago" />
+        tools:layout_editor_absoluteY="635dp" />
 
     <EditText
         android:id="@+id/idTextMonto"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/edittext_rounded_corners"
         android:ems="10"
@@ -124,7 +85,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idTextNombre" />
+        tools:layout_editor_absoluteY="253dp" />
 
     <TextView
         android:id="@+id/textViewNuevoGasto"
@@ -164,7 +125,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/edittext_rounded_corners"
         android:ems="10"
@@ -172,9 +132,37 @@
         android:hint="Fecha Proximo Pago"
         android:inputType="date"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/idTextLinkDeCancelacion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idTextDetalle" />
+        app:layout_constraintTop_toBottomOf="@+id/idTextTipoDeCargo" />
+
+    <CheckBox
+        android:id="@+id/idTextTipoDeCargo"
+        android:layout_width="357dp"
+        android:layout_height="40dp"
+        android:buttonTint="#FFFDFD"
+        android:checked="false"
+        android:duplicateParentState="false"
+        android:focusable="auto"
+        android:fontFamily="@font/lekton"
+        android:text="¿Es un gasto fijo?"
+        android:textColor="#FFFEFE"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="45dp"
+        tools:layout_editor_absoluteY="487dp" />
+
+    <Spinner
+        android:id="@+id/idSpinnerCategorias"
+        android:layout_width="370dp"
+        android:layout_height="53dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
+        android:tag="@string/droplist_categorias"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="319dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
